docs: did account operations

--- a/docs/examples/2.md
+++ b/docs/examples/2.md
@@ -54,3 +54,11 @@ async function getDid({ alias, did }: { alias?: string; did?: string }) {
   });
 }
 ```
+
+## DID Operations
+
+On the created DID Account now you can do various operations, such as getting the document, getting the DID tag, or creating a presentation.
+
+`myDid.getDid()` returns the did tag
+`myDid.getDocument()` returns the did document
+`myDid.createPresentation(credentials)` takes a credentials array in form of VC-JWTs and returns a verifiable presentation
